--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sk-tailwind",
+	"name": "naturral-ai",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -15,9 +15,11 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.31.1",
+		"@skeletonlabs/skeleton": "^0.132.5",
 		"@sveltejs/adapter-auto": "^1.0.3",
 		"@sveltejs/adapter-vercel": "^2.1.1",
 		"@sveltejs/kit": "^1.8.5",
+		"@tailwindcss/forms": "^0.5.3",
 		"@types/common-tags": "^1.8.1",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"@typescript-eslint/parser": "^5.53.0",
